force-app/main/default/objects/Comment__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>