force-app/main/default/objects/Comment__c/fields/HasAttachment__c.field-meta.xml
<CustomField>
    <fullName>HasAttachment__c</fullName>
    <label>Tem Anexo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>