force-app/main/default/objects/Comment__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Sistem de Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>